--- a/mvp_puc_weightlifting.ipynb
+++ b/mvp_puc_weightlifting.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPjzE1C3YzV+oz0FfoyXmru",
+      "authorship_tag": "ABX9TyP78La/6OirrCwagG4AJZ+S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "\n",
         "## ***MVP - Sprint I: Análise de Dados e Boas Práticas***\n",
         "\n",
-        "### ***Uma análise sobre desempenho em campeonatos de Powerlifiting nos Estados Unidos (2015-2020)***\n",
+        "### ***Uma análise sobre desempenho em campeonatos de Powerlifiting nos Estados Unidos em 2020***\n",
         "\n",
         "####Autor: Matheus Martinez de Carvalho\n",
         "\n",
